--- a/public_html/post.html
+++ b/public_html/post.html
@@ -9,16 +9,17 @@ Purpose: This is the html page for posting a item
    <head>
      <meta charset="UTF-8">
      <title>OstaaPost</title>
+     <link rel="stylesheet" href="post.css" />
    </head>
    <body>
-        <div>
+        <div id="page">
             <h1 id="header">Ostaa</h1><br>
             <h1 id="postHeader">Add a Post</h1><br>
             <form>
                 <label for="title">Title</label>
                 <input type="text" id="title" name="title" required><br>
 
-                <label for="desc">Description</label>
+                <label for="desc">Desc</label>
                 <input type="text" id="desc" name="desc" required><br>
 
                 <label for="price">Price</label>
