--- a/public_html/home.html
+++ b/public_html/home.html
@@ -9,22 +9,26 @@ Purpose: This will be the html document the Ostaa marketplace
    <head>
      <meta charset="UTF-8">
      <title>OstaaHome</title>
+     <link rel="stylesheet" href="home.css" />
    </head>
    <body>
-        <div id="homeHeader">
-            <h1 class="header">Ostaa</h1>
+        <div id="header">
+            <h1>Ostaa</h1>
         </div>
-        <div>
-        </div>
-        <div>
-            <h1>Welcome! What would you like to do?</h1><br>
-            <form>
-                <input type="text" id="searchList" name="searchList">
-                <input type="submit" name="searchList" id="searchList" value="Search Listings"><br>
-            </form>
-            <button type="button">View your Listings</button><br>
-            <button type="button">View your Purchases</button><br>
-            <button type="button">Create a Listing</button><br>
+        <div id="content">
+
+          <div id="itemview">
+              <h1 id="optionsh1">Welcome! What would you like to do?</h1><br>
+              <form>
+                  <input type="text" id="searchList" name="searchList">
+                  <input type="submit" name="searchList" id="searchList" value="Search Listings"><br>
+              </form>
+              <button type="button">View your Listings</button><br>
+              <button type="button">View your Purchases</button><br>
+              <button type="button">Create a Listing</button><br>
+          </div>
+          <div id="options">
+          </div>
         </div>
    </body>
  </html>
