--- a/public_html/home.html
+++ b/public_html/home.html
@@ -13,7 +13,7 @@ Purpose: This will be the html document the Ostaa marketplace
    </head>
    <body>
         <div id="header">
-            <h1>Ostaa</h1>
+            <h1 id="ostaa">Ostaa</h1>
         </div>
         <div id="content">
 
