--- a/public_html/post.html
+++ b/public_html/post.html
@@ -15,12 +15,12 @@ Purpose: This is the html page for posting a item
         <div id="page">
             <h1 id="header">Ostaa</h1><br>
             <h1 id="postHeader">Add a Post</h1><br>
-            <form>
+            <form id="item" onsubmit="submitItem(event)">
                 <label for="title">Title</label>
                 <input type="text" id="title" name="title" required><br>
 
-                <label for="desc">Desc</label>
-                <input type="text" id="desc" name="desc" required><br>
+                <label for="description">Desc</label>
+                <input type="text" id="description" name="description" required><br>
 
                 <label for="price">Price</label>
                 <input type="text" id="price" name="price" required><br>
@@ -28,14 +28,19 @@ Purpose: This is the html page for posting a item
                 <label for="status">Status</label>
                 <input type="text" id="status" name="status" required><br>
 
-                <label for="choosefile">Choose file</label>
-                <input type="file" id="chooseFile" name="chooseFile">
+                <label for="image">Choose file</label>
+                <input type="file" id="image" name="image"><br>
 
-                <input type="submit" id="submit" value="Create post">
+                <label for="imageName">Image Name</label>
+                <input type="text" id="imageName" name="imageName" required>
+
+
+                <input type="submit" id="itemSubmit" value="Create post">
             </form>
 
             
         </div>
+        <script src="script.js" async defer></script>
    </body>
  </html>
  
