--- a/public_html/home.html
+++ b/public_html/home.html
@@ -25,11 +25,14 @@ Purpose: This will be the html document the Ostaa marketplace
               </form>
               <button type="button">View your Listings</button><br>
               <button type="button">View your Purchases</button><br>
-              <button type="button">Create a Listing</button><br>
+              <a href="./post.html">
+                <button type="button">Create a Listing</button><br>
+              </a>
           </div>
           <div id="options">
           </div>
         </div>
+        <script src="script.js" async defer></script>
    </body>
  </html>
  
